2008-07-18  Eitan Isaacson  <eitan@ascender.com>

	* pyia/accessible.py: 
	Fixed state names method. 
	Make  __str__ explicityle unicode (for readability).
	* pyia/utils.py: 
	Added getForegroundWindow().

2008-06-23  Eitan Isaacson  <eitan@ascender.com>

	* First entry!
