@@ -185,27 +185,8 @@ EVENT_CONSOLE_LAYOUT = 0x4005
 EVENT_CONSOLE_START_APPLICATION = 0x4006
 EVENT_CONSOLE_END_APPLICATION = 0x4007
 
-winEventIDsToEventNames={
-EVENT_SYSTEM_FOREGROUND:"foreground",
-EVENT_SYSTEM_ALERT:"alert",
-EVENT_SYSTEM_MENUSTART:"menuStart",
-EVENT_SYSTEM_MENUEND:"menuEnd",
-EVENT_SYSTEM_MENUPOPUPSTART:"menuStart",
-EVENT_SYSTEM_MENUPOPUPEND:"menuEnd",
-EVENT_SYSTEM_SCROLLINGSTART:"scrollingStart",
-EVENT_SYSTEM_SWITCHSTART:"switchStart",
-EVENT_SYSTEM_SWITCHEND:"switchEnd",
-EVENT_OBJECT_FOCUS:"gainFocus",
-EVENT_OBJECT_SHOW:"show",
-EVENT_OBJECT_DESTROY:"destroy",
-EVENT_OBJECT_HIDE:"hide",
-EVENT_OBJECT_DESCRIPTIONCHANGE:"descriptionChange",
-EVENT_OBJECT_LOCATIONCHANGE:"locationChange",
-EVENT_OBJECT_NAMECHANGE:"nameChange",
-EVENT_OBJECT_REORDER:"reorder",
-EVENT_OBJECT_SELECTION:"selection",
-EVENT_OBJECT_SELECTIONADD:"selectionAdd",
-EVENT_OBJECT_SELECTIONREMOVE:"selectionRemove",
-EVENT_OBJECT_SELECTIONWITHIN:"selectionWithIn",
-EVENT_OBJECT_STATECHANGE:"stateChange",
-EVENT_OBJECT_VALUECHANGE:"valueChange"}
+winEventIDsToEventNames={}
+
+for _sym, _val in locals().items():
+    if _sym.startswith('EVENT_'):
+        winEventIDsToEventNames[_val] = _sym
